--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/acadelib/app#readme",
+  "license": "GPL-3.0-or-later",
+  "author": {
+    "name": "Samuel Maurice",
+    "email": "samuel@acadelib.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/acadelib/app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/acadelib/app/issues"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
